--- a/.github/workflows/hello-pipeline.yaml
+++ b/.github/workflows/hello-pipeline.yaml
@@ -22,3 +22,12 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world! Hey
 
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Run Python file
+        run: python main.py
+
