--- a/.github/workflows/hello-pipeline.yaml
+++ b/.github/workflows/hello-pipeline.yaml
@@ -18,7 +18,9 @@ jobs:
 
     steps:
 
-      # Runs a single command using the runners shell
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Run a one-line script
         run: echo Hello, world! Hey
 
